--- a/JH2-2/JH2233/kinoko.html
+++ b/JH2-2/JH2233/kinoko.html
@@ -13,9 +13,20 @@
 
 <h3><center> <img src="6.jpg" width="300"><br></center><br>
 <center>一回目の水やり</center></h3>
-
-
-
-
+　　　　　　　　<br>
+<h3><center> <img src="7.jpg" width="300"><br></center><br>
+<center>二回目の水やり<br>少しだけできている</center></h3>
+                <br>
+<h3><center> <img src="8.jpg" width="300"><br></center><br>
+<center>三回目の水やり<br>とても大きくなり収穫時期になった</center></h3>
+                <br>
+<h3><center> <img src="10.jpg" width="300"><br></center><br>
+<center>収穫後</center></h3>
+                                <br>
+<h3><center> <img src="12.jpeg" width="300"><br></center><br>
+<center>収穫後のしいたけ</center></h3>
+                <br>
+<h3><center> <img src="15.jpg" width="300"><br></center><br>
+<center>料理をしたしいたけ<br><br>肉団子の中にしいたけを刻んだものをいれた<br>ご飯に合ってとても美味しかった</center></h3>
 	</body>
 </html>
